--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   pdf: ^3.10.4
   provider: ^5.0.0
   shared_preferences: ^2.0.5
+  #excel: ^2.1.0
+  syncfusion_flutter_xlsio: ^22.2.9
+
   
 dev_dependencies:
   flutter_test:
